--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -10,44 +10,44 @@
     },
     "Tooltip": {
         "App": {
-            "tech1": "Mit Push-Notifications, kannst mandirekte Nachrichten an das Endgerätder Nutzer senden auf denen dieSoftware installiert wurde.",
-            "tech2": "Mit NFC kannst man eine Nahfeld-Kommunikation aufbauen umkontaktlos Daten auszutauschen. Diewird z.B. bei Schließsystemen,Kontaktlosen-Bezahlsystemen, oderAutomatisierungen genutzt.",
-            "tech3": "Bluetooth ist ein drahtloseVerbindungsmöglichkeit mit geringerReichweite, welche z.B. für dieVerbindung mit technischem Zubehörwie z.B. Headsets genutzt wird, abernur Daten übertragen kann.",
-            "tech4": "Verschlüsselung sorgt dafür, dassentweder die Übertragung- oder dieSpeicherung von vertraulichen Datengesichert (verschlüsselt) wird, so dassdiese nur mit Autorisierung zugänglichsind.",
-            "tech5": "Diese Funktion ermöglicht die Ausgabevon Tönen/Musik in der Software.",
-            "tech6": "Über die Integration der Kamera kannman Bilder und Videos aufnehmen undsie in der Software verarbeiten.",
-            "tech7": "Das Gyroskop in modernenEndgeräten liefert Daten über dieBewegung und Ausrichtung desGerätes.",
-            "tech8": "Das GPS ermöglicht den Zugriff aufStandortdaten und kann für dieNavigation und Ortung genutzt werden.",
-            "tech9": "Es besteht die Möglichkeit Werbunginnerhalb der Software anzuzeigen alsz.B. Einnahmequelle.",
-            "tech10": "Ein Anmeldesystem beinhaltet dieMöglichkeit Nutzerkonten zu erstellenund zu verwalten und individualisierteVorgänge in der App abzubilden.",
-            "tech11": "Ein Rollensystem ermöglicht dieUnterscheidung verschiedener Rechte/Rollen in der App. Damit kann derZugriff auf verschiedene Funktionenund Inhalte verwaltet werden.",
-            "tech12": "Die App kann kostenpflichtigangeboten werden, so dass diese zueinem Kaufpreis erworben werdenmuss vor der Installation",
-            "tech13": "Sog. In-App Käufe bieten dieMöglichkeit innerhalb der Appkostenpflichtige Angebote zu schaffen.",
-            "tech14": "Mit der Synchronisierung, ist esmöglich Daten auf verschiedenenSystemen immer auf dem gleichenStand zu halten.",
-            "tech15": "Eine Backup-Funktion ermöglicht esden Datenbestand der App extern zusichern um bei einem Ausfall keinenDatenverlust zu verzeichnen.",
-            "tech16": "Diese Funktion ermöglicht es imBetrieb der App eine Bewertung vomNutzer zu erfragen. Dies sorgt in derRegel für mehr und bessereBewertungen.",
-            "tech17": "Die Integration von Sozialen-Netzwerken ermöglicht deren Inhalteanzuzeigen und mit ihnen zuinteragieren, als auch die Anmeldungdarüber auch für die eigene App zunutzen.",
-            "tech18": "Eine Kalenderintegration bildet denlokalen oder externen Kalender in derApp ab und kann diesen anzeigen undbearbeiten.",
-            "tech19": "Die Adressbuch Integration ermöglichtden Zugriff auf die Kontakte desAdressbuches auf dem Endgerät.",
-            "tech20": "Die Integration von Analyse-Dienstenermöglicht es Daten zur Nutzung derApp und der Nutzer zu erfassen umdas Nutzerverhalten besser zuverstehen und die App mehr zuoptimieren."
+            "tech1": "Mit Push-Notifications, kannst man direkte Nachrichten an das Endgerät der Nutzer senden auf denen die Software installiert wurde.",
+            "tech2": "Mit NFC kannst man eine Nahfeld-Kommunikation aufbauen um kontaktlos Daten auszutauschen. Die wird z.B. bei Schließsystemen, Kontaktlosen-Bezahlsystemen, oder Automatisierungen genutzt.",
+            "tech3": "Bluetooth ist ein drahtlose Verbindungsmöglichkeit mit geringer Reichweite, welche z.B. für die Verbindung mit technischem Zubehör wie z.B. Headsets genutzt wird, aber nur Daten übertragen kann.",
+            "tech4": "Verschlüsselung sorgt dafür, dass entweder die Übertragung- oder die Speicherung von vertraulichen Daten gesichert (verschlüsselt) wird, so dass diese nur mit Autorisierung zugänglich sind.",
+            "tech5": "Diese Funktion ermöglicht die Ausgabe von Tönen/Musik in der Software.",
+            "tech6": "Über die Integration der Kamera kann man Bilder und Videos aufnehmen und sie in der Software verarbeiten.",
+            "tech7": "Das Gyroskop in modernen Endgeräten liefert Daten über die Bewegung und Ausrichtung des Gerätes.",
+            "tech8": "Das GPS ermöglicht den Zugriff auf Standortdaten und kann für die Navigation und Ortung genutzt werden.",
+            "tech9": "Es besteht die Möglichkeit Werbung innerhalb der Software anzuzeigen als z.B. Einnahmequelle.",
+            "tech10": "Ein Anmeldesystem beinhaltet die Möglichkeit Nutzerkonten zu erstellen und zu verwalten und individualisierte Vorgänge in der App abzubilden.",
+            "tech11": "Ein Rollensystem ermöglicht die Unterscheidung verschiedener Rechte/Rollen in der App. Damit kann der Zugriff auf verschiedene Funktionen und Inhalte verwaltet werden.",
+            "tech12": "Die App kann kostenpflichtig angeboten werden, so dass diese zu einem Kaufpreis erworben werden muss vor der Installation",
+            "tech13": "Sog. In-App Käufe bieten die Möglichkeit innerhalb der App kostenpflichtige Angebote zu schaffen.",
+            "tech14": "Mit der Synchronisierung, ist es möglich Daten auf verschiedenen Systemen immer auf dem gleichen Stand zu halten.",
+            "tech15": "Eine Backup-Funktion ermöglicht es den Datenbestand der App extern zu sichern um bei einem Ausfall keinen Datenverlust zu verzeichnen.",
+            "tech16": "Diese Funktion ermöglicht es im Betrieb der App eine Bewertung vom Nutzer zu erfragen. Dies sorgt in der Regel für mehr und bessere Bewertungen.",
+            "tech17": "Die Integration von Sozialen-Netzwerken ermöglicht deren Inhalte anzuzeigen und mit ihnen zu interagieren, als auch die Anmeldung darüber auch für die eigene App zu nutzen.",
+            "tech18": "Eine Kalenderintegration bildet den lokalen oder externen Kalender in der App ab und kann diesen anzeigen und bearbeiten.",
+            "tech19": "Die Adressbuch Integration ermöglicht den Zugriff auf die Kontakte des Adressbuches auf dem Endgerät.",
+            "tech20": "Die Integration von Analyse-Diensten ermöglicht es Daten zur Nutzung der App und der Nutzer zu erfassen um das Nutzerverhalten besser zu verstehen und die App mehr zu optimieren."
         },
         "Website": {
-            "tech1": "Mit Push-Notifications, kannst mandirekte Nachrichten an das Endgerätder Nutzer senden auf denen dieSoftware installiert wurde.",
-            "tech2": "Die Videoeinbindung ermöglicht dasAnzeigen und Abspielen von Videosauf der Website.",
-            "tech3": "Bestimmte Elemente lassen sichanimieren und heben das statischeAussehen der Website auf.",
-            "tech4": "Verschlüsselung sorgt dafür, dassentweder die Übertragung- oder dieSpeicherung von vertraulichen Datengesichert (verschlüsselt) wird, so dassdiese nur mit Autorisierung zugänglichsind.",
-            "tech5": "Wenn regelmäßig Neuigkeiten in Formvon Podcast oder Textbeiträgenveröffentlich werden, sollte eineinfaches Contentpflege Systemintegriert werden",
-            "tech6": "Über die Integration der Kamera kannman Bilder und Videos aufnehmen undsie in der Software verarbeiten.",
-            "tech7": "Wenn Produkte auf der Websiteverkauft werden sollen, kann ein",
-            "tech8": "Es besteht die Möglichkeit Werbunginnerhalb der Software anzuzeigen alsz.B. Einnahmequelle.",
-            "tech9": "Ein Anmeldesystem beinhaltet dieMöglichkeit Nutzerkonten zu erstellenund zu verwalten und individualisierteVorgänge in der App abzubilden.",
+            "tech1": "Mit Push-Notifications, kannst man direkte Nachrichten an das Endgerät der Nutzer senden auf denen die Software installiert wurde.",
+            "tech2": "Die Videoeinbindung ermöglicht das Anzeigen und Abspielen von Videos auf der Website.",
+            "tech3": "Bestimmte Elemente lassen sich animieren und heben das statische Aussehen der Website auf.",
+            "tech4": "Verschlüsselung sorgt dafür, dass entweder die Übertragung- oder die Speicherung von vertraulichen Daten gesichert (verschlüsselt) wird, so dass diese nur mit Autorisierung zugänglich sind.",
+            "tech5": "Wenn regelmäßig Neuigkeiten in Form von Podcast oder Textbeiträgen veröffentlich werden, sollte ein einfaches Contentpflege System integriert werden",
+            "tech6": "Über die Integration der Kamera kann man Bilder und Videos aufnehmen und sie in der Software verarbeiten.",
+            "tech7": "Wenn Produkte auf der Website verkauft werden sollen, kann ein",
+            "tech8": "Es besteht die Möglichkeit Werbung innerhalb der Software anzuzeigen als z.B. Einnahmequelle.",
+            "tech9": "Ein Anmeldesystem beinhaltet die Möglichkeit Nutzerkonten zu erstellen und zu verwalten und individualisierte Vorgänge in der App abzubilden.",
             "tech10": "Ein Rollensystem ermöglicht dieUnterscheidung verschiedener Rechte/Rollen in der App. Damit kann derZugriff auf verschiedene Funktionenund Inhalte verwaltet werden.",
-            "tech11": "Die Integration von Analyse-Dienstenermöglicht es Daten zur Nutzung derApp und der Nutzer zu erfassen umdas Nutzerverhalten besser zuverstehen und die App mehr zuoptimieren.",
-            "tech12": "Mit der Synchronisierung, ist esmöglich Daten auf verschiedenenSystemen immer auf dem gleichenStand zu halten.",
-            "tech13": "Mit Pop-Up Fenstern kann man dieAufmerksamkeit der Nutzer zusätzlichbeanspruchen, z.B. wenn man dasEintragen in den Newsletterbeeinflussen möchte.",
-            "tech14": "Die Integration von Sozialen-Netzwerken ermöglicht deren Inhalteanzuzeigen und mit ihnen zuinteragieren, als auch die Anmeldungdarüber auch für die eigene App zunutzen.",
-            "tech15": "Eine Kalenderintegration bildet denlokalen oder externen Kalender in derApp ab und kann diesen anzeigen undbearbeiten.",
-            "tech16": "Die Adressbuch Integration ermöglichtden Zugriff auf die Kontakte desAdressbuches auf dem Endgerät."
+            "tech11": "Die Integration von Analyse-Diensten ermöglicht es Daten zur Nutzung der App und der Nutzer zu erfassen um das Nutzerverhalten besser zu verstehen und die App mehr zu optimieren.",
+            "tech12": "Mit der Synchronisierung, ist es möglich Daten auf verschiedenen Systemen immer auf dem gleichen Stand zu halten.",
+            "tech13": "Mit Pop-Up Fenstern kann man die Aufmerksamkeit der Nutzer zusätzlich beanspruchen, z.B. wenn man das Eintragen in den Newsletter beeinflussen möchte.",
+            "tech14": "Die Integration von Sozialen-Netzwerken ermöglicht deren Inhalte anzuzeigen und mit ihnen zu interagieren, als auch die Anmeldung darüber auch für die eigene App zu nutzen.",
+            "tech15": "Eine Kalenderintegration bildet den lokalen oder externen Kalender in der App ab und kann diesen anzeigen und bearbeiten.",
+            "tech16": "Die Adressbuch Integration ermöglichtden Zugriff auf die Kontakte des Adressbuches auf dem Endgerät."
         }
     },
     "Progress": "Fortschritt",
@@ -152,7 +152,7 @@
     "Website": {
         "Pages": {
             "Question": "Soll deine Website eine oder mehrere Seite haben?",
-            "Heading": "usgenommen Impressum & Datenschutz",
+            "Heading": "Ausgenommen Impressum & Datenschutz",
             "Ans1": "Onepager", 
             "Ans2": "Bis zu 3 Seiten",
             "Ans3": "Bis zu 6 Seiten", 
